--- a/change-password.html
+++ b/change-password.html
@@ -213,7 +213,7 @@
                 <div class="row">
                     <div class="col-sm-10 col-sm-offset-1 profiel-container">
 
-                        <form action="" method="">
+                        <form action="Post code for the database here" method="POST">
 
                             <div class="profiel-header">
                                 <h3>
